--- a/app/views/save-progress/v1/check-answers.html
+++ b/app/views/save-progress/v1/check-answers.html
@@ -134,9 +134,10 @@
 
         </dl>
 
-        <h2 class="govuk-heading-m">
+        <!-- <h2 class="govuk-heading-m">
           Before you continue
         </h2>
+
         <p class="govuk-body">
           You cannot save your progress and come back later. Before you continue, make sure you have everything you need for your appeal.
         <p>
@@ -171,7 +172,7 @@
               <li>any other documents that you'd like to submit in support of your appeal</li>
             </ul>
           </div>
-        </details>
+        </details> -->
 
         {{ govukButton({
           text: "Continue to my appeal"
