--- a/app/views/save-progress/v1/contact-details/your-details.html
+++ b/app/views/save-progress/v1/contact-details/your-details.html
@@ -32,8 +32,13 @@
         </h1>
 
         <p class="govuk-body">
-          We will use <span class="govuk-!-font-weight-bold">admin@appellants.co.uk</span> to contact you about this appeal.
+          This is the email you gave us for this appeal:<br>
+          admin@appellants.co.uk
         </p>
+
+        <!-- <p class="govuk-body">
+          We’ll use this email if we need to contact you about this appeal.
+        </p> -->
 
         {{ govukInput({
           id: "appealsub-"+version+"-aboutyou-yourname",
