--- a/app/views/save-progress/v1/magic-link-email-sent.html
+++ b/app/views/save-progress/v1/magic-link-email-sent.html
@@ -3,7 +3,7 @@
 
 {% set serviceName = "Appeal a planning decision" %}
 
-{% set title = "Your email address is confirmed" %}
+{% set title = "We’ve sent you an email" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -36,26 +36,36 @@
         {{ title }}
       </label>
 
-      <!-- <p class="govuk-body">
-        We'll use this email to contact you if we have any questions about your appeal.
+      <p class="govuk-body">
+        We’ve emailed a link to:<br>
+        admin@wedoplanningappeals.co.uk
       </p>
 
       <p class="govuk-body">
-        You can also save your progress.
-      </p> -->
+        Go to the link in the email to continue with the appeal submission.
+      </p>
 
-      <div class="govuk-button-group">
+      <h2 class="govuk-heading-m">
+        If you’re having problems
+      </h2>
 
-        {{ govukButton({
-          href: "what-is-your-application-number",
-          text: "Continue to my appeal"
-        }) }}
-
-      </div>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          check the email has not gone into your spam/bulk folder
+        </li>
+        <li>
+          we can <a href="">resend the email</a>
+        </li>
+        <li>
+          email our customer support team at enquiries@theplanninginspectorate.gov.uk
+        </li>
+        <li>
+          call our customer support team on 0303 444 5000
+        </li>
+      </ul>
 
     </div>
   </div>
-
 
   <!-- this is a prototype only link -->
   <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-9">
@@ -63,11 +73,12 @@
 
   <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-0">
     <p class="govuk-body-s">
-      <a href="expired-link">
-        Link expired version
+      <a href="magic-link-email">
+        Go to the email (your inbox)
       </a>
     </p>
   </div>
 
 </div>
+
 {% endblock %}
