--- a/app/views/save-progress/v1/what-is-your-application-number.html
+++ b/app/views/save-progress/v1/what-is-your-application-number.html
@@ -3,7 +3,7 @@
 
 {% set serviceName = "Appeal a planning decision" %}
 
-{% set title = "What’s your email address?" %}
+{% set title = "What’s your planning application number?" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -28,26 +28,22 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-      <form action="confirm-email" method="post">
+      <form action="task-list" method="post">
 
         <span class="govuk-caption-l">{{ subServiceName }}</span>
 
         <div class="govuk-form-group">
 
-          <label class="govuk-label govuk-label--l" for="email">
+          <label class="govuk-label govuk-label--l" for="applicationNumber">
             {{ title }}
           </label>
 
-          <p class="govuk-body">
-            We'll use this email to contact you if we have any questions about your appeal.
-          </p>
-
-          <p class="govuk-body">
-            You can also save your progress.
-          </p>
+          <div id="applicationNumber-hint" class="govuk-hint">
+            You can find this on the decision letter from your local planning department.
+          </div>
 
           <div class="govuk-form-group">
-            <input class="govuk-input govuk-input--width-20" id="email" name="email" type="text" spellcheck="false" autocomplete="email" value="{{ data['email'] }}">
+            <input class="govuk-input govuk-input--width-10" id="applicationNumber" name="applicationNumber" type="number" spellcheck="false" autocomplete="false" value="{{ data['applicationNumber'] }}">
           </div>
 
         </div>
