Save progress updates, logic fixed

--- a/app/views/save-progress/v1/appeal-saved.html
+++ b/app/views/save-progress/v1/appeal-saved.html
@@ -50,7 +50,7 @@
   <div class="govuk-grid-column-two-thirds">
     <ul class="govuk-list">
       <li>
-        <a href="appeal-start" class="govuk-link">
+        <a href="what-do-you-want-to-do" class="govuk-link">
           Continue with another appeal
         </a>
       </li>
