--- a/app/views/save-progress/v1/check-answers.html
+++ b/app/views/save-progress/v1/check-answers.html
@@ -134,12 +134,16 @@
 
         </dl>
 
-        <!-- <h2 class="govuk-heading-m">
-          Before you continue
+        <h2 class="govuk-heading-m">
+          Before you start
         </h2>
 
         <p class="govuk-body">
-          You cannot save your progress and come back later. Before you continue, make sure you have everything you need for your appeal.
+          Make sure you have everything you need for your appeal.
+        <p>
+
+        <p class="govuk-body">
+          If you want to exit the service at any point, you’ll be able to save your progress.
         <p>
 
         <details class="govuk-details" data-module="govuk-details">
@@ -172,7 +176,7 @@
               <li>any other documents that you'd like to submit in support of your appeal</li>
             </ul>
           </div>
-        </details> -->
+        </details>
 
         {{ govukButton({
           text: "Continue to my appeal"
