--- a/app/views/save-progress/v1/confirm-email-resent.html
+++ b/app/views/save-progress/v1/confirm-email-resent.html
@@ -3,7 +3,7 @@
 
 {% set serviceName = "Appeal a planning decision" %}
 
-{% set title = "We’ve sent you another email" %}
+{% set title = "We’ve sent you another link" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
