--- a/app/views/save-progress/v1/incomplete-appeals.html
+++ b/app/views/save-progress/v1/incomplete-appeals.html
@@ -42,6 +42,7 @@
 
   </div>
 
+
   <div class="govuk-grid-column-full">
 
     <table class="govuk-table">
@@ -56,7 +57,7 @@
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__cell">
-            <a href="task-list" class="govuk-link govuk-link--no-visited-state">
+            <a href="task-list?application=1234567&progress=yes" class="govuk-link govuk-link--no-visited-state">
               1234567
             </a>
           </th>
@@ -65,7 +66,7 @@
         </tr>
         <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__cell">
-            <a href="task-list" class="govuk-link govuk-link--no-visited-state">
+            <a href="task-list?application=2345678&progress=yes" class="govuk-link govuk-link--no-visited-state">
               2345678
             </a>
           </th>
@@ -74,7 +75,7 @@
         </tr>
         <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__cell">
-            <a href="task-list" class="govuk-link govuk-link--no-visited-state">
+            <a href="task-list?application=3456789&progress=yes" class="govuk-link govuk-link--no-visited-state">
               3456789
             </a>
           </th>
@@ -85,7 +86,7 @@
     </table>
 
     <p class="govuk-body">
-      <a href="appeal-start">
+      <a href="/appellant-submission/v13/">
         Start a new planning appeal
       </a>
     </p>
