--- a/app/views/save-progress/v1/what-do-you-want-to-do.html
+++ b/app/views/save-progress/v1/what-do-you-want-to-do.html
@@ -3,7 +3,7 @@
 
 {% set serviceName = "Appeal a planning decision" %}
 
-{% set title = "What’s your email address?" %}
+{% set title = "What do you want to do?" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -28,27 +28,32 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-      <form action="confirm-email" method="post">
+      <form action="" method="post">
 
         <span class="govuk-caption-l">{{ subServiceName }}</span>
 
         <div class="govuk-form-group">
 
-          <label class="govuk-label govuk-label--l" for="email">
+          <label class="govuk-label govuk-label--l" for="new-or-continue">
             {{ title }}
           </label>
 
-          <p class="govuk-body">
-            We’ll use this email to contact you if we have any questions about your appeal.
-          </p>
+          {{ govukRadios({
+            name: "new-or-continue",
+            fieldset: {
 
-          <p class="govuk-body">
-            You can also save your progress.
-          </p>
-
-          <div class="govuk-form-group">
-            <input class="govuk-input govuk-input--width-20" id="email" name="email" type="text" spellcheck="false" autocomplete="email" value="{{ data['email'] }}">
-          </div>
+            },
+            items: [
+              {
+                value: "new",
+                text: "Start a new appeal"
+              },
+              {
+                value: "continue",
+                text: "Continue with an appeal"
+              }
+            ]
+          }) }}
 
         </div>
 
@@ -60,5 +65,8 @@
 
     </div>
   </div>
+
+
+
 
 {% endblock %}
