Save progress version 2 updates

--- a/app/views/save-progress/v2/appeal-saved.html
+++ b/app/views/save-progress/v2/appeal-saved.html
@@ -50,7 +50,7 @@
   <div class="govuk-grid-column-two-thirds">
     <ul class="govuk-list">
       <li>
-        <a href="what-is-your-email" class="govuk-link">
+        <a href="incomplete-appeals" class="govuk-link">
           Continue with another appeal
         </a>
       </li>
