--- a/app/views/save-progress/v2/before-you-continue.html
+++ b/app/views/save-progress/v2/before-you-continue.html
@@ -3,7 +3,7 @@
 
 {% set serviceName = "Appeal a planning decision" %}
 
-{% set title = "Before you continue" %}
+{% set title = "You’ll need to submit some documents with your appeal" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -36,9 +36,9 @@
         {{ title }}
       </label>
 
-      <p class="govuk-body">
+      <!-- <p class="govuk-body">
         You’ll need to submit some documents with your appeal.
-      </p>
+      </p> -->
 
       <details class="govuk-details" data-module="govuk-details">
         <summary class="govuk-details__summary">
@@ -88,19 +88,6 @@
       </div>
 
     </div>
-  </div>
-
-
-  <!-- this is a prototype only link -->
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-9">
-  </div>
-
-  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-0">
-    <p class="govuk-body-s">
-      <a href="expired-link">
-        Link expired version
-      </a>
-    </p>
   </div>
 
 </div>
