--- a/app/views/save-progress/v2/email-confirmed.html
+++ b/app/views/save-progress/v2/email-confirmed.html
@@ -48,7 +48,7 @@
 
         {{ govukButton({
           href: "before-you-continue",
-          text: "Continue to my appeal"
+          text: "Continue"
         }) }}
 
         {{ govukButton({
