--- a/app/views/save-progress/v2/input-magic-link-email.html
+++ b/app/views/save-progress/v2/input-magic-link-email.html
@@ -39,7 +39,7 @@
           </label>
 
           <div class="govuk-form-group">
-            <input class="govuk-input govuk-input--width-20" id="email" name="email" type="text" spellcheck="false" autocomplete="email" value="{{ data['email'] }}">
+            <input class="govuk-input govuk-input--width-20" id="email" name="email" type="text" spellcheck="false" autocomplete="email" value="">
           </div>
 
         </div>
@@ -49,7 +49,7 @@
         }) }}
 
       </form>
-<!-- 
+<!--
       <p class="govuk-body">
         <a href="appeal-start">
           Start a new planning appeal
